<resources>
    <string name="app_name">MultiWaveHeader</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="login_forget">忘记密码？</string>
    <string name="login_login">登 录</string>
    <string name="login_tourist_mode">游客模式</string>
    <string name="login_verify_mode">验证码模式</string>
    <string name="login_password">请输入密码</string>
    <string name="login_password_mode">密码模式</string>
    <string name="login_sms">获取验证码</string>
    <string name="login_username">输入手机号码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_wave_console">Wave Console</string>
    <string name="console_toggle">Toggle:</string>
    <string name="console_toggle_direction">up side down</string>
    <string name="console_toggle_running">running</string>
    <string name="console_shape">Shape:</string>
    <string name="console_shape_rect">rect</string>
    <string name="console_shape_round">roundRect</string>
    <string name="console_shape_oval">oval</string>
    <string name="console_number">Number:</string>
    <string name="console_wave">Wave:</string>
    <string name="console_angle">Angle:</string>
    <string name="console_alpha">Alpha:</string>
    <string name="console_velocity">Velocity:</string>
    <string name="console_progress">Progress:</string>
    <string name="console_start_color">StartColor:</string>
    <string name="console_close_color">CloseColor:</string>

</resources>
