<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.WaveConsoleFragment">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/multiWaveHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mwhEnableFullScreen="true"
        app:mwhProgress="0.45">
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwVelocity="100dp"-->
            <!--app:mwScaleX="1.2"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="100dp"-->
            <!--app:mwVelocity="-90dp"/>-->
    </com.scwang.wave.MultiWaveHeader>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="@dimen/padding_common"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_toggle"/>
            <CheckBox
                android:id="@+id/checkBoxDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_toggle_direction"/>
            <CheckBox
                android:id="@+id/checkBoxRunning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_toggle_running"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_shape"/>
            <RadioButton
                android:id="@+id/radioRect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/console_shape_rect"/>
            <RadioButton
                android:id="@+id/radioRoundRect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_shape_round"/>
            <RadioButton
                android:id="@+id/radioOval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_shape_oval"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_number"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="5"
                app:dsb_min="0"
                app:dsb_value="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_wave"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekWave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="60"
                app:dsb_min="0"
                app:dsb_value="30"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_angle"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekAngle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="360"
                app:dsb_min="0"
                app:dsb_value="45"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_alpha"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekAlpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="100"
                app:dsb_min="0"
                app:dsb_value="45"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_velocity"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekVelocity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="100"
                app:dsb_min="0"
                app:dsb_value="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_progress"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorPrimary"
                app:dsb_progressColor="@color/colorPrimary"
                app:dsb_max="100"
                app:dsb_min="0"
                app:dsb_value="70"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_start_color"/>
            <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
                android:id="@+id/sliderStartColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView style="@style/AppTheme.Label"
                android:text="@string/console_close_color"/>
            <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
                android:id="@+id/sliderCloseColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar"
        android:id="@+id/toolbar"
        app:title="@string/fragment_wave_console"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:contentInsetStartWithNavigation="0dp"
        android:background="@color/transparent"/>

</FrameLayout>