<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserLoginActivity">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waves"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:mwhStartColor="@color/colorPrimary"
        app:mwhCloseColor="#31AFFE"
        app:mwhAlphaColor="0.45"
        android:tag="
        70,25,1.4,1.4,-26
        100,5,1.4,1.2,15
        420,0,1.15,1,-10
        520,10,1.7,1.5,20
        220,0,1,1,-15
        ">
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="70dp"-->
            <!--app:mwOffsetY="25dp"-->
            <!--app:mwScaleX="1.4"-->
            <!--app:mwScaleY="1.4"-->
            <!--app:mwVelocity="-26dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="100dp"-->
            <!--app:mwOffsetY="5dp"-->
            <!--app:mwScaleX="1.4"-->
            <!--app:mwScaleY="1.2"-->
            <!--app:mwVelocity="-15dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="420dp"-->
            <!--app:mwOffsetY="0dp"-->
            <!--app:mwScaleX="1.15"-->
            <!--app:mwScaleY="1"-->
            <!--app:mwVelocity="-10dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="520dp"-->
            <!--app:mwOffsetY="10dp"-->
            <!--app:mwScaleX="1.7"-->
            <!--app:mwScaleY="1.5"-->
            <!--app:mwVelocity="20dp"/>-->
        <!--<com.scwang.wave.Wave style="@style/MultiWaveHeader.Wave"-->
            <!--app:mwOffsetX="220dp"-->
            <!--app:mwOffsetY="0dp"-->
            <!--app:mwScaleX="1"-->
            <!--app:mwScaleY="1"-->
            <!--app:mwVelocity="-15dp"/>-->
    </com.scwang.wave.MultiWaveHeader>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="-85dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/waves"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_login_logo"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/waves"
        android:drawableLeft="@mipmap/ic_login_account"
        android:drawableStart="@mipmap/ic_login_account"
        android:drawablePadding="15dp"
        android:padding="3dp"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        android:hint="@string/login_username"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/textsize_content"
        tools:text="13828416860" />

    <View style="@style/AppTheme.Divison"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/username"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@mipmap/ic_login_password"
        android:drawableStart="@mipmap/ic_login_password"
        android:drawablePadding="15dp"
        android:padding="3dp"
        android:background="@color/transparent"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/textsize_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <View style="@style/AppTheme.Divison"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/password"/>

    <ImageView style="@style/AppTheme.Label.Assistant"
        android:id="@+id/delete"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/username"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_login_delete"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView style="@style/AppTheme.Label.Assistant"
        android:id="@+id/forget"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/password"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/login_forget"/>

    <TextView style="@style/AppTheme.Button.Primary"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/password"
        android:padding="10dp"
        android:textSize="@dimen/textsize_titlesmall"
        android:text="@string/login_login"
        android:background="@drawable/primary_button"
        tools:enabled="true"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="359dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp">
        <TextView style="@style/AppTheme.Label.Assistant"
            android:id="@+id/tourist_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_login_tourist"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_tourist_mode"
            android:background="?attr/selectableItemBackgroundBorderless"/>
        <View style="@style/AppTheme.Divison.Vertical"
            android:layout_height="30dp"
            android:layout_marginBottom="12dp"/>
        <TextView style="@style/AppTheme.Label.Assistant"
            android:id="@+id/verify_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:drawableTop="@mipmap/ic_login_phone"
            android:drawablePadding="10dp"
            android:text="@string/login_verify_mode"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>
    
</RelativeLayout>
